# raytracer

./: .gitignore  CMakeLists.txt  README.md  config.toml
include/toml/: toml.h
src/: camera.cpp  camera.h  color.cpp  color.h  geometry.cpp  geometry.h  intersection.h  light.cpp  light.h  main.cpp  material.cpp  material.h  math.cpp  math.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  texture.h  traceable.cpp  traceable.h  utilities.cpp  utilities.h
src/geometry/: rectangle.cpp  rectangle.h  sphere.cpp  sphere.h
src/materials/: diffuse.cpp  diffuse.h  emissive.cpp  emissive.h  metal.cpp  metal.h  refractive.cpp  refractive.h
src/textures/: checker_texture.cpp  checker_texture.h
src/utilities/: random.cpp  random.h
